<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_VCC_NO" Id="{ba131e16-6293-4fa2-9f66-e3d9ca59a9ec}" SpecialFunc="None">
    <Declaration><![CDATA[(*Deprecated*)
(* This Function Block Implements Basic Functionality for NO Vent Valves VVC *)
(* Note Interlock Logic is External *)
{attribute 'obsolete' := 'FB_VCC_NO has been deprecated and is not valid!'}
FUNCTION_BLOCK FB_VCC_NO
VAR_IN_OUT
    {attribute 'pytmc' := 'pv:'}
    iq_stValve : ST_VCC_NO;

END_VAR
VAR_INPUT
    i_xExtILK_OK:BOOL; (*Other External Interlock, Set to True when no external interlock is required*)
    i_xOverrideMode : BOOL; (*To be linked to global override bit. This Overrides Vacuum logic only, EPS, MPS and PMPS are still enforces*)

END_VAR
VAR_OUTPUT
END_VAR
VAR

    tonOvrd	:	TON;
    tonDelOK : TON;
    rtOK	:	R_TRIG;
    (*IO*)
    xCLS_DO	AT%Q*: BOOL;

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF NOT iq_stValve.xCLS_OK THEN
iq_stValve.pv_xCLS_SW := FALSE;
END_IF

(* Override logic *)
(* Goal: give ability to override, but do so in a way that people won't forget it.
Solution: Override only after ten seconds of override, protect against blips,
when the valve permission goes true for more than ten seconds consistently, remove override
*)

tonDelOK(IN:=iq_stValve.xCLS_OK, PT:=T#10S);
rtOK(CLK:=tonDelOK.Q);
IF rtOK.Q THEN iq_stValve.pv_xOvrdCls :=FALSE; END_IF

//Override timer
tonOvrd(IN:=iq_stValve.pv_xOvrdCls, PT:=T#10S);

(* Here's where the valve is closed *)
iq_stValve.xCLS_DO := (iq_stValve.pv_xCLS_SW AND iq_stValve.xCLS_OK) OR (tonOvrd.Q AND i_xOverrideMode);]]></ST>
    </Implementation>
    <Action Name="ACT_IO" Id="{c25df29b-6cf5-4052-842b-22ecdcba8c16}">
      <Implementation>
        <ST><![CDATA[(*inputs*)
iq_stValve.xOverrideMode := i_xOverrideMode;
(*outputs*)
xCLS_DO:= iq_stValve.xCLS_DO;]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_Close" Id="{25a4b227-8441-4ebd-93be-fa48f91d9458}">
      <Declaration><![CDATA[METHOD M_Close : BOOL
VAR_INPUT
        close:BOOL; //True to CLose, False to OPEN
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[This^.iq_stValve.pv_xCLS_SW :=Close;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>